--- a/package.json
+++ b/package.json
@@ -1,36 +1,19 @@
 {
-  "name": "eleventy-netlify-boilerplate",
-  "version": "1.0.3",
-  "description": "A boilerplate for building a fast static website with the Eleventy static site generator, for deployment to Netlify.",
   "scripts": {
-    "build": "npx eleventy",
-    "watch": "npx eleventy --watch",
-    "debug": "DEBUG=* npx eleventy"
+    "start": "eleventy --serve & postcss styles/tailwind.css --o _tmp/style.css --watch",
+    "build": "ELEVENTY_PRODUCTION=true eleventy & ELEVENTY_PRODUCTION=true postcss styles/tailwind.css --o _site/style.css"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/danurbanowicz/eleventy-netlify-boilerplate"
-  },
-  "author": {
-    "name": "Dan Urbanowicz",
-    "email": "dan.urbanowicz@gmail.com",
-    "url": "https://www.danurbanowicz.com/"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/danurbanowicz/eleventy-netlify-boilerplate/issues"
-  },
-  "homepage": "https://github.com/danurbanowicz/eleventy-netlify-boilerplate",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "luxon": "^1.22.2",
-    "markdown-it": "^10.0.0",
-    "markdown-it-anchor": "^5.2.7"
+    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@tailwindcss/custom-forms": "^0.2.1",
+    "alpinejs": "^2.3.5",
+    "html-minifier": "^4.0.0",
+    "postcss-clean": "^1.1.0",
+    "postcss-cli": "^7.1.0",
+    "tailwindcss": "^1.4.6"
   },
   "dependencies": {
-    "@11ty/eleventy-navigation": "^0.1.5",
-    "clean-css": "^4.2.1",
-    "html-minifier": "^4.0.0",
-    "uglify-es": "^3.3.9"
+    "eleventy-plugin-svg-contents": "^0.7.0"
   }
 }
