Update Settings “settings”

--- a/content/globals/settings.json
+++ b/content/globals/settings.json
@@ -1,4 +1,5 @@
 {
-    "logo": "/assets/uploads/logo.svg",
-    "cookies": "This website uses cookies to ensure you get the best experience on our website. [Learn more](https://cookiesandyou.com/)"
+  "logo": "/assets/uploads/logo.svg",
+  "cookies": "This website uses cookies to ensure you get the best experience on our website. [Learn more](https://cookiesandyou.com/)",
+  "analytics": "1234"
 }
