--- a/content/globals/settings.json
+++ b/content/globals/settings.json
@@ -1,5 +1,5 @@
 {
   "logo": "/assets/uploads/logo.svg",
   "cookies": "This website uses cookies to ensure you get the best experience. [Learn more](https://cookiesandyou.com/)",
-  "analytics": "GTM-565ZMXD"
+  "gtm": "GTM-565ZMXD"
 }
